src/objects/QPMS__Course__c.object
<CustomObject>
    <description>Stores course related information.</description>
    <fields>
        <fullName>QPMS__All_Users_From_Doc__c</fullName>
        <label>All Users From Doc</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Allow_re_test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field stores the  Allow re-test information</description>
        <label>Allow re-test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Allowed_Days__c</fullName>
        <label>Allowed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__ApprovalProcess__c</fullName>
        <label>ApprovalProcess</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Course</fullName>
                </value>
                <value>
                    <fullName>CourseApproval</fullName>
                </value>
                <value>
                    <fullName>CourseStatusChange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Group__c</fullName>
        <label>Approval Group</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Process_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Process Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Courses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Courses3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Courses2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Assessment_Questions__c</fullName>
        <label>Assessment Questions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Choices</fullName>
                </value>
                <value>
                    <fullName>Correct Answer</fullName>
                </value>
                <value>
                    <fullName>Add another</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Assessment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field  is used to store the  boolean values assignment required or not</description>
        <label>Assessment Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Business_Unit__c</fullName>
        <description>This field is used to store business unit information</description>
        <label>Business Unit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business_Unit</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Completion_Period_Days__c</fullName>
        <description>this field is used to store the</description>
        <label>Completion Period (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__ContentVersionId__c</fullName>
        <label>ContentVersionId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Cost__c</fullName>
        <description>this field is  used to store the  cost field</description>
        <label>Cost ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Course_Description__c</fullName>
        <description>This  field is used to store the course description</description>
        <label>Course Description</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Course_From_Doc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Course From Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Course_Name__c</fullName>
        <label>Course Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Course_Not_Related_To_Job_Function__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Courses not related to job functions.</description>
        <label>Course Not Related To Job Function</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Course_Profile_Owner__c</fullName>
        <formula>Owner:User.FirstName &amp;&quot; &quot;&amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Course_Status__c</fullName>
        <label>Course Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Course_Title__c</fullName>
        <description>this is course title</description>
        <inlineHelpText>this is course title</inlineHelpText>
        <label>Course Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Course_Type__c</fullName>
        <description>this is used to store  thr course type</description>
        <label>Course Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Instructor Led</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Course_from_CourseProfile__c</fullName>
        <description>This field store the status of the Course_from_CourseProfile fikled value</description>
        <label>Course from CourseProfile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Withdraw</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__CreateCourseSession__c</fullName>
        <label>CreateCourseSession</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CurrentApprovalSequenceNumber__c</fullName>
        <label>CurrentApprovalSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Departments__c</fullName>
        <description>this field is used to store depart ments</description>
        <label>Departments</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Doc_security__c</fullName>
        <formula>QPMS__Document_Profile__r.QPMS__Enable_Security__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doc security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Profile</label>
        <referenceTo>QPMS__Document_Profile__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Status__c</fullName>
        <formula>text(QPMS__Document_Profile__r.QPMS__Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Duration__c</fullName>
        <description>this  field is used to store  Duration</description>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to store enable security value</description>
        <label>Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Enrollment_Max__c</fullName>
        <description>this field  is used to store Enrollment Max</description>
        <label>Enrollment Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Expiration_Date__c</fullName>
        <description>this value stores expiration date of course</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Trainer_s__c</fullName>
        <label>External Trainer(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__FilterConditionForCourseInPersonProfile__c</fullName>
        <formula>IF(OR(AND(TEXT(QPMS__Course_Type__c )==&apos;Instructor Led&apos;, QPMS__Course_Not_Related_To_Job_Function__c ==true),(TEXT(QPMS__Course_Type__c) ==&apos;Document&apos;)), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FilterConditionForCourseInPersonProfile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Final_Message_on_final_fail__c</fullName>
        <description>This field is used to store the Final Message on final fail information</description>
        <label>Final Message on final fail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Followers__c</fullName>
        <description>To hold followers for this record</description>
        <inlineHelpText>To hold followers for this record</inlineHelpText>
        <label>Followers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Grace_period_for_Review__c</fullName>
        <description>this filed is used to store  Grace period for Review</description>
        <label>Grace period for Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Groups_From_Course__c</fullName>
        <label>Groups From Course</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Inform_Manager_Continue_With_training__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inform Manager &amp; Continue With training</description>
        <inlineHelpText>Inform Manager &amp; Continue With training</inlineHelpText>
        <label>Inform Manager &amp; Continue With training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Inform_Manager_Wait_for_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inform Manager &amp; Wait for approval</description>
        <inlineHelpText>Inform Manager &amp; Wait for approval</inlineHelpText>
        <label>Inform Manager &amp; Wait for approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To Hold the initial submitter</description>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CoursesMvCJ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__InitiatingSite_Name__c</fullName>
        <formula>QPMS__Initiating_Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiating Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Security__c</fullName>
        <description>Initiating Site Security</description>
        <label>Initiating Site Security</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Initiating site filed in course</description>
        <label>Initiating Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Internal_Trainer_s__c</fullName>
        <label>Internal Trainer(s)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Internal_Trainers__c</fullName>
        <label>Internal Trainers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Is_Created_From_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field store Is Created From Document value</description>
        <label>Is Created From Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Is_Refresher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refresher Training Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__JobFunction__c</fullName>
        <label>JobFunction</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Locations__c</fullName>
        <description>this field is used to store  locations</description>
        <label>Locations</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Manager_Approval_Required_For_Enroll__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manager Approval Required For Enroll</description>
        <label>Manager Approval Required For Enroll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Minimum_Passing_Score__c</fullName>
        <description>this field is used to store Minimum Passing Score</description>
        <label>Minimum Passing Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__No_Of_Attempts__c</fullName>
        <label>No Of Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__No_Of_Questions__c</fullName>
        <description>This field stores no of questions for assessment</description>
        <label>No Of Questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver__c</fullName>
        <label>Note To Approver</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Number_Scheme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this is a lookup field  to store numbering scheme</description>
        <label>Number Scheme</label>
        <referenceTo>QPMS__Number_Scheme__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Pre_requisite_Courses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field is used to store Pre-requisite Courses</description>
        <label>Pre-requisite Courses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Prerequisite_Courses__c</fullName>
        <label>Prerequisite Courses</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Process__c</fullName>
        <description>this field is used to store the  process</description>
        <label>Process</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Product__c</fullName>
        <description>this field is used to store the product information</description>
        <label>Product</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Purpose__c</fullName>
        <description>This is used to store purpose of th ecourse</description>
        <label>Purpose</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Reason__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Reason_for_uncheck_Takeassessment__c</fullName>
        <description>Reason for uncheck Takeassessment</description>
        <label>Reason for uncheck TakeAssessment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__RecordCloneId__c</fullName>
        <label>RecordCloneId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Refresher_Advance_Notice_Days__c</fullName>
        <description>This field stores the Refresher Advance Notice(Days)</description>
        <label>Refresher Advance Notice(Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Refresher_Date__c</fullName>
        <description>This filed stores refresher date</description>
        <label>Refresher Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Refresher_Period_Days__c</fullName>
        <description>this field is used to store Refresher Period (Days) in course object</description>
        <label>Refresher Period (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Show_All_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show All Users</description>
        <label>Show All Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <label>Signed Off Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Sites__c</fullName>
        <description>this field is used to store the sites information</description>
        <label>Sites</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <description>This field is used to store status values</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>InReview</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Supported_Regulations__c</fullName>
        <description>this  field is used to store Supported Regulations</description>
        <label>Supported Regulations</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Training_Group__c</fullName>
        <description>this group store theuser id s from groups from doc to course</description>
        <label>Training Group</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Training_Materials__c</fullName>
        <description>this field is used to store Training Materials information</description>
        <label>Training Materials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__UOM__c</fullName>
        <description>this field is used to store the  UOM valew</description>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Users_From_Course__c</fullName>
        <label>Users From Course</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Users_From_Training__c</fullName>
        <label>Users From Training</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Users_Not_Allowed_To_Self_Enroll__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users cannot self enroll to course session when checked.</description>
        <label>Users Not Allowed To Self Enroll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to check that record is locked or not( in approval process )</description>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Status__c</columns>
        <columns>QPMS__Course_Title__c</columns>
        <columns>QPMS__Course_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>QPMS__Prerequisite_Courses__c</columns>
        <columns>QPMS__Pre_requisite_Courses__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Course Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <recordTypes>
        <fullName>QPMS__Prerequisite_Courses</fullName>
        <active>true</active>
        <label>Prerequisite Courses</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>